--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,14 +1,15 @@
 name: Publish to crates.io
 
 on:
-  workflow_run:
-    workflows: ["Rust"]  # <-- Name of the Rust build & test workflow
-    types:
-      - completed
+  push:
+    tags:
+      - '*'
+
+env:
+  CARGO_TERM_COLOR: always
 
 jobs:
   publish:
-    needs: build_and_test  # <-- This ensures the publish only happens if build_and_test succeeds
     runs-on: ubuntu-latest
 
     steps:
@@ -22,7 +23,4 @@ jobs:
         profile: minimal
 
     - name: Publish to Crates.io
-      uses: actions-rs/cargo@v1
-      with:
-        command: publish
-        args: --token ${{ secrets.CRATES_IO_TOKEN }}
+      run: cargo publish --token ${{ secrets.CRATES_IO_TOKEN }}
