--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "otp_rs"
-version = "1.0.0"
+version = "1.0.1"
 edition = "2021"
+description = "A text based one time pad library"
+license = "LGPL-3.0-or-later"
+repository = "https://github.com/JamesClarke7283/otp-rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
